--- a/deals_of_day/deal.html
+++ b/deals_of_day/deal.html
@@ -2,43 +2,171 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="deal.css">
+    <link rel="stylesheet" href="deal.css" />
 </head>
 
 <body>
     <div id="header"></div>
+
     <div id="mainbox">
+        <div id="heading">
+            <div id="head_left">
+                <div>
+                    <h1>Deal of the Day.</h1>
+                    Great new deals.Every day.
+                </div>
+            </div>
+            <div id="head_right">3 : 40 : 00</div>
+        </div>
         <div id="box1">
             <div>
-                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6479/6479683_sd.jpg;maxHeight=140;maxWidth=140">
+                <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6478/6478304cv11d.jpg;maxHeight=500;maxWidth=400" />
             </div>
             <div>
-                <h3>ASUS 11.6* Chromebook - Intel Celeron - 4GB Memory - 32GB eMMC Flash Memory - Gray - Grey </h3>
+                <h3>
+                    ASUS 11.6* Chromebook - Intel Celeron - 4GB Memory - 32GB eMMC Flash Memory - Gray - Grey
+                </h3>
                 <h4>Get it today</h4>
-                <h5>
-                    <b>Pickup:</b> Ready in 1 hour at Aiea
-                </h5>
+                <h5><b>Pickup:</b> Ready in 1 hour at Aiea</h5>
                 <p>See all pickup locations</p>
                 <h5>
                     <b>Shipping:</b> Unavailable in your area This item is only available in certain markets.
                 </h5>
                 <p>Estimates for 96939</p>
                 <h2>$99.00</h2>
-                Save $120 was $219.00
-                <div id="red">Deal has ended</div>
+                <p2>Save $120</p2> was $219.00
+                <div>
+                    <p4>Deal has ended</p4>
+                </div>
+                <button>Add to cart</button>
             </div>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div id="footer"></div>
+        <hr />
+        <div>
+            <h2>Bonus Deals of the Day</h2>
+        </div>
+        <hr />
+        <div id="box2"></div>
+        <hr />
+        <div id="box3">
+            <h2>Get the Deal of the Day delivered to you.</h2>
+
+            <div id="b1">
+                <div>
+                    <p>Sign up for daily emails,text or both.</p>
+
+                    <p>Email</p>
+                    <input id="email" placeholder="Enter your email address" />
+                    <button>Sign Up</button>
+                </div>
+                <div>
+                    <p>Text</p>
+                    <input id="email" placeholder="Enter your mobile number" />
+                    <p>Texts are automated and consent is optional.not a condition of purchase.Message and data rates may apply.
+                        <U>Terms and Privacy Policy apply</U>
+                    </p>
+                    <button>Sign Up</button>
+                </div>
+            </div>
+            <div id="b2">
+                <div>
+                    <h5>Ready in one hour</h5>
+                    <p>with Store or Curbside Pickup</p>
+                </div>
+                <div>
+                    <h5>Free next-day delivery</h5>
+                    <p>on thousand of items.</p>
+                </div>
+                <div>
+                    <h5>Same-day delivery</h5>
+                    <p>Order by 3 p.m... get it by 8 p.m.</p>
+                    <p>Order by 2 p.m. Sunday.</p>
+                </div>
+            </div>
+            <div id="b3">
+                <div>
+                    <img src="">
+                </div>
+                <div>
+                    <h2>More Black ideas.More Black makers.</h2>
+                    <p>The digital future is coming.And we need to make sure the inequities of our past don't continue into our future.</p>
+                </div>
+            </div>
+
+        </div>
+
+        <hr>
+        <div id="box4">
+            <p>Today's featured deals and top tech.valid through 2/27/22.*</p>
+            <div id="b4_1">
+                <div>
+                    <img src="">
+                    <p>Laptops & Computers</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>TV's & Projectors</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Video Games</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Apple</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Headphones</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Cell Phones</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Tablets</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Major Appliances</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Small Kitchen Appliances</p>
+                </div>
+            </div>
+            <div id="b4_2">
+                <h5>Trending now (15 items)</h5>
+                <div>
+                    <img src="">
+                    <p>Laptops & Computers</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>TV's & Projectors</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Video Games</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Apple</p>
+                </div>
+                <div>
+                    <img src="">
+                    <p>Headphones</p>
+                </div>
+                <div>
+                </div>
+            </div>
+            <div id="footer"></div>
 </body>
 
 </html>
-<script src="deal.js">
-</script>
+<script src="deal.js"></script>
