--- a/deals_of_day/deal.html
+++ b/deals_of_day/deal.html
@@ -101,66 +101,80 @@
 
         <hr>
         <div id="box4">
-            <p>Today's featured deals and top tech.valid through 2/27/22.*</p>
+            <h5>Today's featured deals and top tech.valid through 2/27/22.*</h5>
             <div id="b4_1">
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6428/6428996_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Laptops & Computers</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6453/6453313_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>TV's & Projectors</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6464/6464307_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Video Games</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/dam/SOL-87130-iphone13_der-34fea294-f51f-4e9d-a935-f7ce45af0650.jpg;maxHeight=100;maxWidth=200">
                     <p>Apple</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6471/6471291_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Headphones</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6493/6493171_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Cell Phones</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6423/6423329_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Tablets</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6448/6448511_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Major Appliances</p>
                 </div>
                 <div>
-                    <img src="">
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6957/6957188_sd.jpg;maxHeight=100;maxWidth=200">
                     <p>Small Kitchen Appliances</p>
                 </div>
             </div>
+            <hr>
+            <h5>Trending now (15 items)</h5>
+
             <div id="b4_2">
-                <h5>Trending now (15 items)</h5>
                 <div>
-                    <img src="">
-                    <p>Laptops & Computers</p>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6485/6485757cv4d.jpg;maxHeight=100;maxWidth=200">
+                    <p>PC Gaming</p>
                 </div>
                 <div>
-                    <img src="">
-                    <p>TV's & Projectors</p>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6347/6347611_rd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Baby Care</p>
                 </div>
                 <div>
-                    <img src="">
-                    <p>Video Games</p>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6288/6288538_sd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Sound Bars & Speakers</p>
                 </div>
                 <div>
-                    <img src="">
-                    <p>Apple</p>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6213/6213100_sd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Cameras & Camcorders</p>
                 </div>
                 <div>
-                    <img src="">
-                    <p>Headphones</p>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6452/6452032_sd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Wearable Technology</p>
+                </div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6492/6492872cv1d.jpg;maxHeight=100;maxWidth=200">
+                    <p>Smart Home & Networking</p>
+                </div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/5888/5888542_rd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Health & Streaming Media Players</p>
+                </div>
+                <div>
+                    <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6407/6407922_sd.jpg;maxHeight=100;maxWidth=200">
+                    <p>Home & Outdoor</p>
                 </div>
                 <div>
                 </div>
