--- a/deals_of_day/deal.html
+++ b/deals_of_day/deal.html
@@ -20,29 +20,37 @@
                     Great new deals.Every day.
                 </div>
             </div>
-            <div id="head_right">3 : 40 : 00</div>
+            <div id="head_right">
+                <div>
+                    <div> 3 : 40 : 25 </div>
+                    <div style="font-size: 15px;">hrs min sec</div>
+                </div>
+
+            </div>
         </div>
         <div id="box1">
             <div>
                 <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6478/6478304cv11d.jpg;maxHeight=500;maxWidth=400" />
             </div>
             <div>
-                <h3>
-                    ASUS 11.6* Chromebook - Intel Celeron - 4GB Memory - 32GB eMMC Flash Memory - Gray - Grey
-                </h3>
-                <h4>Get it today</h4>
-                <h5><b>Pickup:</b> Ready in 1 hour at Aiea</h5>
-                <p>See all pickup locations</p>
-                <h5>
-                    <b>Shipping:</b> Unavailable in your area This item is only available in certain markets.
-                </h5>
-                <p>Estimates for 96939</p>
-                <h2>$99.00</h2>
-                <p2>Save $120</p2> was $219.00
-                <div>
-                    <p4>Deal has ended</p4>
+                <div id="b11">
+                    <h3>
+                        ASUS 11.6* Chromebook - Intel Celeron - 4GB Memory - 32GB eMMC Flash Memory - Gray - Grey
+                    </h3>
+                    <h4>Get it today</h4>
+                    <h5><b>Pickup:</b> Ready in 1 hour at Aiea</h5>
+                    <p>See all pickup locations</p>
+                    <h5>
+                        <b>Shipping:</b> Unavailable in your area This item is only available in certain markets.
+                    </h5>
+                    <p>Estimates for 96939</p>
+                    <h2>$99.00</h2>
+                    <p2>Save $120</p2> was $219.00
+                    <div>
+                        <p4>Deal has ended</p4>
+                    </div>
+                    <button>Add to cart</button>
                 </div>
-                <button>Add to cart</button>
             </div>
         </div>
         <hr />
@@ -53,55 +61,33 @@
         <div id="box2"></div>
         <hr />
         <div id="box3">
-            <h2>Get the Deal of the Day delivered to you.</h2>
+            <div id="b">
+                <h2>Get the Deal of the Day delivered to you.</h2>
+                <h6>Sign up for daily emails,text or both.</h6>
+            </div>
 
             <div id="b1">
                 <div>
-                    <p>Sign up for daily emails,text or both.</p>
-
-                    <p>Email</p>
+                    <h5>Email</h5>
                     <input id="email" placeholder="Enter your email address" />
-                    <button>Sign Up</button>
+                    <button id="sign">Sign Up</button>
                 </div>
                 <div>
-                    <p>Text</p>
-                    <input id="email" placeholder="Enter your mobile number" />
-                    <p>Texts are automated and consent is optional.not a condition of purchase.Message and data rates may apply.
+                    <h5>Text</h5>
+                    <input id="numb" placeholder="Enter your mobile number" />
+                    <p id="t1">Texts are automated and consent is optional.not a condition of purchase.Message and data rates may apply.
                         <U>Terms and Privacy Policy apply</U>
                     </p>
                     <button>Sign Up</button>
                 </div>
             </div>
-            <div id="b2">
-                <div>
-                    <h5>Ready in one hour</h5>
-                    <p>with Store or Curbside Pickup</p>
-                </div>
-                <div>
-                    <h5>Free next-day delivery</h5>
-                    <p>on thousand of items.</p>
-                </div>
-                <div>
-                    <h5>Same-day delivery</h5>
-                    <p>Order by 3 p.m... get it by 8 p.m.</p>
-                    <p>Order by 2 p.m. Sunday.</p>
-                </div>
-            </div>
-            <div id="b3">
-                <div>
-                    <img src="">
-                </div>
-                <div>
-                    <h2>More Black ideas.More Black makers.</h2>
-                    <p>The digital future is coming.And we need to make sure the inequities of our past don't continue into our future.</p>
-                </div>
-            </div>
-
         </div>
 
         <hr>
         <div id="box4">
-            <h5>Today's featured deals and top tech.valid through 2/27/22.*</h5>
+            <h2 style="color: red;font-weight: bold;">Top Deals</h2>
+            <h6>Today's featured deals and top tech.valid through 2/27/22.*</h6>
+            <hr>
             <div id="b4_1">
                 <div>
                     <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6428/6428996_sd.jpg;maxHeight=100;maxWidth=200">
@@ -141,8 +127,8 @@
                 </div>
             </div>
             <hr>
-            <h5>Trending now (15 items)</h5>
-
+            <h6>Trending now (15 items)</h6>
+            <hr>
             <div id="b4_2">
                 <div>
                     <img src="https://pisces.bbystatic.com/image2/BestBuy_US/images/products/6485/6485757cv4d.jpg;maxHeight=100;maxWidth=200">
@@ -179,7 +165,26 @@
                 <div>
                 </div>
             </div>
-            <div id="footer"></div>
+            <div id="summary">
+                <div style="font-size: 20px;font-weight: bold;">
+                    Daily deals at Best buy.
+                </div>
+                <div id="s1">
+                    <div>
+                        <div style="font-size: 15px;font-weight: bold;">Where every day is a one-day sale.</div>
+                        <div style="font-size: 12px;margin-top: 10px;">
+                            When you shop the Best Buy Deal of the Day, or sign up for our daily e-mails, you'll find fantastic prices on tech from every corner of our site. For example, if you're shopping for laptop deals, we have incredible offers on powerful laptops that will
+                            get you ready for work or play and leave money in your pocket for cool accessories too. Although these amazing deals rotate every day, we always have more than one sale a day going on. We even have sales on whole categories
+                            of products and deals tailored for a particular audience, such as deals for students to help you or someone you know head off to college with the tech they need to succeed.</div>
+                    </div>
+                    <div style="font-size: 12px;">
+                        While some sales, like our Cyber Monday sale, only happen once a year, the Deal of the Day is an ongoing event that lets you look for new deals every morning in your inbox or on BestBuy.com. In addition, you can get even more hot deals on all of the tech
+                        you love, including some of the latest and most popular tech on the market.
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer"></div>
 </body>
 
 </html>
