--- a/deal_of_day/deal.html
+++ b/deal_of_day/deal.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div id="header"></div>
+    <!-- <div id="header"></div> -->
 
     <div id="mainbox">
         <div id="heading">
